# deity-informant

./: .dockerignore  .gitignore  Dockerfile.ghidra  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
deity_informant/: __init__.py  c64.py  canonical.py  cli.py  expr.py  kernel.py  lifter.py  recorder.py  render.py  sidl.py  stext.py  structured.py  transcribe.py  vm.py
docs/: canonical.md  decompiler-implementation.md  decompiler-plan-prototype.md  decompiler-plan.md  deity-informant-requirements.md  design.md  differential-fuzz.md  ghidra.md  hello-world.md  illegal-opcodes.md  kernel.md  nms-provenance.md  sidl.md  smc-recovery.md  symbolic-recorder.md  transcribe.md
examples/: README.md  __init__.py  data_swap2.py  defmon_recon.py  defmon_sched.py  deity_informant_flat_prototype.py  fetch_fixtures.py  fuzz.py  hello_world.py  oracle_match.py
ghidra/6510/: build.py
ghidra/6510/data/languages/: 6510.ldefs  6510.slaspec  6510_illegal.sinc
ghidra/6510/headless/: DumpPcode.java  run.sh
tests/: _common.py  _fuzzgen.py  conftest.py  test_c64.py  test_canonical.py  test_cli.py  test_coverage.py  test_differential_fuzz.py  test_expr.py  test_hello_world.py  test_illegals.py  test_kernel.py  test_lifter.py  test_oracle.py  test_recorder.py  test_render.py  test_sidl.py  test_structured.py  test_transcribe.py  test_vm.py
